--- a/css/styles.css
+++ b/css/styles.css
@@ -12,5 +12,20 @@ body {
 }
 
 .wrapper {
-    width: 400px
+    width: 400px;
+    border: 3px solid red;
+    background-color: #080705;
+    color: #EFDEC4;
 }
+
+.calc-button-row {
+    border: 3px solid dodgerblue;
+}
+
+.screen {
+    text-align: right;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 40px;
+    padding: 20px 5px;
+}
+
